--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "@vitejs/plugin-react": "^1.0.0",
     "chokidar": "^3.5.2",
     "fast-glob": "^3.2.7",
-    "fs-extra": "^10.0.0"
+    "fs-extra": "^10.0.0",
+    "vite-plugin-windicss": "^1.4.10"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
