--- a/examples/vite-project/package.json
+++ b/examples/vite-project/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
+    "@iconify-json/tabler": "^1.0.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^1.0.0",
