--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "build-client": "tsc -p src/client"
   },
   "dependencies": {
+    "@svgr/core": "^5.5.0",
     "@vitejs/plugin-react": "^1.0.0",
     "chokidar": "^3.5.2",
     "fast-glob": "^3.2.7",
     "fs-extra": "^10.0.0",
+    "unplugin-icons": "^0.12.14",
     "vite-plugin-windicss": "^1.4.10"
   },
   "devDependencies": {
