--- a/examples/vite-project/package.json
+++ b/examples/vite-project/package.json
@@ -7,8 +7,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@mdx-js/react": "^1.6.22",
+    "history": "^5.0.1",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-router-dom": "^6.0.0-beta.7"
   },
   "devDependencies": {
     "@iconify-json/tabler": "^1.0.1",
