--- a/package.json
+++ b/package.json
@@ -1,13 +1,7 @@
 {
-  "name": "vite-plugin-react-app",
+  "name": "monorepo",
   "version": "0.1.0",
   "description": "vite plugin for building react app",
-  "main": "dist/node/index.js",
-  "types": "dist/node/index.d.ts",
-  "exports": {
-    ".": "./dist/node/index.js",
-    "./*": "./*"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Codpoe/vite-plugin-react-app.git"
@@ -25,43 +19,17 @@
     ]
   },
   "scripts": {
-    "prepare": "husky install",
-    "dev": "concurrently \"npm:dev-*\"",
-    "dev-node": "tsc -w -p src/node",
-    "dev-client": "tsc -w -p src/client",
-    "build": "rimraf dist && concurrently \"npm:build-*\"",
-    "build-node": "tsc -p src/node",
-    "build-client": "tsc -p src/client"
-  },
-  "dependencies": {
-    "@mdx-js/mdx": "^2.0.0-next.9",
-    "@mdx-js/react": "^2.0.0-next.9",
-    "@svgr/core": "^5.5.0",
-    "@vitejs/plugin-react": "^1.0.0",
-    "chokidar": "^3.5.2",
-    "fast-glob": "^3.2.7",
-    "fs-extra": "^10.0.0",
-    "unplugin-icons": "^0.12.14",
-    "vite-plugin-mdx": "^3.5.8",
-    "vite-plugin-windicss": "^1.4.10"
+    "prepare": "husky install"
   },
   "devDependencies": {
-    "@types/fs-extra": "^9.0.13",
-    "@types/node": "^16.7.6",
-    "@types/react": "^17.0.27",
-    "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "concurrently": "^6.3.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "history": "^5.0.1",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.0-beta.6",
     "rimraf": "^3.0.2",
     "typescript": "^4.4.3",
     "vite": "^2.6.5"
