--- a/packages/playground/vite-project/package.json
+++ b/packages/playground/vite-project/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@iconify-json/tabler": "^1.0.1",
+    "@types/mdx-js__react": "^1.5.4",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^1.0.0",
