--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -33,6 +33,7 @@
     "chokidar": "^3.5.2",
     "fast-glob": "^3.2.7",
     "fs-extra": "^10.0.0",
+    "jest-docblock": "^27.0.6",
     "unplugin-icons": "^0.12.14",
     "vite-plugin-mdx": "^3.5.8",
     "vite-plugin-windicss": "^1.4.10"
