feat: improve hot update

--- a/packages/react-app/src/client/tsconfig.json
+++ b/packages/react-app/src/client/tsconfig.json
@@ -4,7 +4,8 @@
     "module": "ESNext",
     "lib": ["ESNext", "DOM"],
     "jsx": "react",
-    "outDir": "../../dist/client"
+    "outDir": "../../dist/client",
+    "types": ["vite/client", "../../clientTypes"]
   },
-  "include": [".", "../../clientTypes.d.ts"]
+  "include": ["."]
 }
