--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -6,6 +6,7 @@
   "types": "dist/node/index.d.ts",
   "exports": {
     ".": "./dist/node/index.js",
+    "./client": "./dist/client/index.js",
     "./*": "./*"
   },
   "repository": {
