--- a/packages/playground/vite-project/package.json
+++ b/packages/playground/vite-project/package.json
@@ -8,10 +8,10 @@
   },
   "dependencies": {
     "@mdx-js/react": "^1.6.22",
-    "history": "^5.0.1",
+    "history": "^5.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^6.0.0-beta.7"
+    "react-router-dom": "^6.0.1"
   },
   "devDependencies": {
     "@iconify-json/tabler": "^1.0.1",
